test/compile_errors/err_issue64_hashmap_get_bad_key_type.w
//! expect-error: wrong argument type in call to 'HashMap.get'

fn main:
    let lookup: HashMap[str, i32] = HashMap.new()
    lookup.get(1)
